--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 3309:3306
     environment:
-      MYSQL_DATABASE: tpachato
+      MYSQL_DATABASE: examiheb
       MYSQL_ROOT_PASSWORD: ihebihebiheb
   app:
     depends_on:
@@ -19,9 +19,13 @@ services:
     restart: always
     ports:
       - 8089:8089
-    environment:
-      MYSQL_HOST: mysqlCICD
-      MYSQL_USER: root
-      MYSQL_PASSWORD: ihebihebiheb
+      
+    environment: 
+      
+       - spring.datasource.url=jdbc:mysql://mysql:3306/examiheb?createDatabaseIfNotExists=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false 
+       - spring.datasource.username=root 
+       - spring.datasource.password=ihebihebiheb 
+       
+      
 volumes:
   db:
